# foreign

./: foreign.cabal
Foreign/Function/: ABI.hsc  Interface.hsc  Signature.hsc  Struct.hs  Type.hsc
Foreign/Function/Interface/: Argument.hs  Result.hs  Type.hsc  Util.hs
